fix: add scrollbar-gutter property for improved layout stability

--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -37,6 +37,10 @@
     --layout-margin: 42px;
   }
 }
+html {
+  scrollbar-gutter: stable;
+}
+
 * {
   box-sizing: border-box;
 }
